# mif

cmake/: library.cmake
examples/components/: CMakeLists.txt
examples/components/config/: config.json
examples/components/src/: main.cpp
include/mif/application/: application.h
include/mif/application/id/: service.h
src/mif/application/: application.cpp  components_factory.cpp
